--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -270,50 +270,50 @@ As well as distances, three covariates were recorded: habitat type (a four level
 The AIC-best mixture model was a two point mixture with observer and minutes after sunrise as covariates (shown in Web Figure 6), closely followed by the model with only observer as a covariate (Table \ref{williams-pike-table}). In this case a hazard-rate with observer and minutes after sunrise as covariates beat the mixtures in AIC terms, although by less than 1 AIC point. The difference in $P_a$ between these two models is about $15\%$.  It is encouraging that there is such a small difference in AIC, and that covariate mixture models were selected over mixture models without covariates, despite the large number of parameters that such models entail.
 
 \begin{table}
-\caption[]{Comparison of results from \protect{\cite{Williams:2007tc}}, \protect{\cite{Pike:2003ug}}, \protect{\cite{Borkin:2012vj}} and \protect{\cite{Marques:2007vm}} with results from fitting mixture model detection functions. In each case the first line for each data set is the model from the original article. Mixture model components were selected by AIC. In each case the AIC-best model is emboldened, but note for the \protect{\cite{Williams:2007tc}} data, all models were close in AIC terms. In the table ``(cont.)'' denotes that the covariate was included in the model as continuous, otherwise covariates entered the model as factors (\texttt{BBSn} indicates Beaufort sea state with \texttt{n} factors). $\cos(x)$ indicates a Cosine adjustment of order $x$. K-S $p$ is the $p$-value from a Kolmogorov-Smirnov goodness-of-fit test.}
+\caption[]{Comparison of results from \protect{\cite{Williams:2007tc}}, \protect{\cite{Pike:2003ug}}, \protect{\cite{Borkin:2012vj}} and \protect{\cite{Marques:2007vm}} with results from fitting mixture model detection functions. In each case the first line for each data set is the model from the original article. Mixture model components were selected by AIC ($\Delta$AIC form best model is listed). In the table ``(cont.)'' denotes that the covariate was included in the model as continuous, otherwise covariates entered the model as factors (\texttt{BBSn} indicates Beaufort sea state with \texttt{n} factors). $\cos(x)$ indicates a Cosine adjustment of order $x$. K-S $p$ is the $p$-value from a Kolmogorov-Smirnov goodness-of-fit test.}
 \centering
 \begin{tabular}{c c c c c c}
 \hline \hline
-Species & Model & AIC & $\hat{P_a}$ & $\% CV \hat{P_a}$ & K-S $p$\\
+Species & Model & $\Delta$AIC & $\hat{P_a}$ & $\% CV \hat{P_a}$ & K-S $p$\\
 \hline
-Harbour seal & Hn + $\cos(2)$ & 2771.05 & 0.425 & 7.55 & 0.52\\
-(in water) & Hn 2-pt  & \textbf{2769.86} & 0.335 & 15.38 & 0.94\\
+Harbour seal & Hn + $\cos(2)$ & 1.19 & 0.425 & 7.55 & 0.52\\
+(in water) & Hn 2-pt  & 0 & 0.335 & 15.38 & 0.94\\
 &&&&&\\
-Harbour & Hr  & \textbf{690.66} & 0.212 & 32.0 & 0.99\\
-porpoise & Hn 2-pt & 692.09 & 0.254 & 18.18 & 0.99\\
+Harbour & Hr  & 0 & 0.212 & 32.0 & 0.99\\
+porpoise & Hn 2-pt & 1.43 & 0.254 & 18.18 & 0.99\\
 &&&&&\\
-Humpback & Hn + $\cos(2)$ & \textbf{1033.06} & 0.386 & 12.64 & 0.67 \\
-whale & Hn 2-pt & 1035.94 & 0.381 & 18.48 & 0.64 \\
+Humpback & Hn + $\cos(2)$ & 0 & 0.386 & 12.64 & 0.67 \\
+whale & Hn 2-pt & 2.88 & 0.381 & 18.48 & 0.64 \\
 &&&&&\\
-Long-finned & Hn + $\cos(2)$ \texttt{BSS} (cont.) & 1286.5 & 0.452 & 8.69 & 0.48\\ % mrds
+Long-finned & Hn + $\cos(2)$ \texttt{BSS} (cont.) & 1.94 & 0.452 & 8.69 & 0.48\\ % mrds
 % Hn 1-pt + $\cos(2)$& \texttt{BSS} (cont.) & 1296 & 0.37 & 9.56 & 0.319 \\ % Distance result 
-pilot whales  & Hn 2-pt &  1298.42  &  0.295  &  17.17  &  0.95 \\
- & Hn 2-pt \texttt{BSS5} &  1284.85  &  0.208  &  28.84  &  0.82 \\
- & Hn 2-pt  \texttt{BSS2}  &  1284.99  &  0.211  &  23.39  &  0.95 \\
- & Hn 2-pt  \texttt{BSS3}  &  1296.27  &  0.270  &  17.46  &  0.99 \\
- & Hn 2-pt  \texttt{BSS} (cont.) &  \textbf{1284.56}  &  0.216  &  24.17  &  0.67 \\
+pilot whales  & Hn 2-pt          &  13.86  &  0.295  &  17.17  &  0.95 \\
+ & Hn 2-pt \texttt{BSS5}         &  0.29   &  0.208  &  28.84  &  0.82 \\
+ & Hn 2-pt  \texttt{BSS2}        &  0.43  &  0.211  &  23.39  &  0.95 \\
+ & Hn 2-pt  \texttt{BSS3}        &  11.71 &  0.270  &  17.46  &  0.99 \\
+ & Hn 2-pt  \texttt{BSS} (cont.) & 0  &  0.216  &  24.17  &  0.67 \\
  &&&&&\\
-Wood ants & Hr \texttt{nest.size} + \texttt{habitat} & 743.56 & 0.195  & 21.72 & 0.89\\ % mrds result
+Wood ants & Hr \texttt{nest.size} + \texttt{habitat} & 6.29 & 0.195  & 21.72 & 0.89\\ % mrds result
 % & Hr  \texttt{nest.size} + \texttt{habitat} & 745.2 & 0.194 & 10.6 & 0.95\\  % Distance result 
- & Hn 2-pt  None  &  754.61  &  0.184  &  15.46  &  0.96 \\
- & Hn 2-pt \texttt{habitat} &  751.27  &  0.188  &  14.85  &  0.97 \\
- & Hn 2-pt \texttt{species} &  756.59  &  0.184  &  15.48  &  0.94 \\
- & Hn 2-pt \texttt{nest.size} &  741.64  &  0.214  &  15.19  &  0.76 \\
- & Hn 2-pt \texttt{habitat} + \texttt{species} &  753.23  &  0.186  &  14.94  &  0.99 \\
- & Hn 2-pt \texttt{habitat} + \texttt{nest.size}  &  \textbf{737.27}  &  0.179  &  17.55  &  0.72 \\
- & Hn 2-pt \texttt{nest.size} + \texttt{species}   &  741.92  &  0.210  &  15.84  &  0.77 \\
- & Hn 2-pt \texttt{nest.size} + \texttt{species} + \texttt{habitat}  &  739.08  &  0.178  &  18.09  &  0.83 \\
+ & Hn 2-pt  None                                                     &  17.34 &  0.184  &  15.46  &  0.96 \\
+ & Hn 2-pt \texttt{habitat}                                          &  14     &  0.188  &  14.85  &  0.97 \\
+ & Hn 2-pt \texttt{species}                                          &  19.32  &  0.184  &  15.48  &  0.94 \\
+ & Hn 2-pt \texttt{nest.size}                                        &  4.37   &  0.214  &  15.19  &  0.76 \\
+ & Hn 2-pt \texttt{habitat} + \texttt{species}                       &  15.96  &  0.186  &  14.94  &  0.99 \\
+ & Hn 2-pt \texttt{habitat} + \texttt{nest.size}                     &  0      &  0.179  &  17.55  &  0.72 \\
+ & Hn 2-pt \texttt{nest.size} + \texttt{species}                     &  4.65   &  0.210  &  15.84  &  0.77 \\
+ & Hn 2-pt \texttt{nest.size} + \texttt{species} + \texttt{habitat}  &  1.81   &  0.178  &  18.09  &  0.83 \\
  &&&&&\\
-Amakihi  & Hr \texttt{obs} + \texttt{mas} & \textbf{10777.38} &  0.319 & 5.11 & 0.08\\ % mrds
+Amakihi  & Hr \texttt{obs} + \texttt{mas} & 0 &  0.319 & 5.11 & 0.08\\ % mrds
 %  &  Hr & \texttt{obs} + \texttt{mas} & \textbf{10777.72} & 0.3 & 2.65 & 0.036 \\ % Distance result 
- & Hn 2-pt None  &  10805.48  &  0.283  &  6.21  &  0.12 \\
- & Hn 2-pt \texttt{obs}  &  10778.69  &  0.279  &  5.86  &  0.04 \\
- & Hn 2-pt \texttt{has}  &  10807.19  &  0.282  &  6.95  &  0.33 \\
- & Hn 2-pt \texttt{mas}  &  10805.11  &  0.284  &  6.52  &  0.31 \\
- & Hn 2-pt \texttt{obs}+\texttt{has}  &  10782.53  &  0.283  &  6.21  &  0.23 \\
- & Hn 2-pt \texttt{obs}+\texttt{mas}  &  10778.07  &  0.279  &  6.1  &  0.14 \\
- & Hn 2-pt \texttt{mas}+\texttt{has}  &  10809.17  &  0.282  &  6.97  &  0.43 \\
- & Hn 2-pt \texttt{mas}+\texttt{has}+\texttt{obs}  &  10784.5  &  0.282  &  6.33  &  0.35 \\
+ & Hn 2-pt None                                    &  28.1   &  0.283  &  6.21  &  0.12 \\
+ & Hn 2-pt \texttt{obs}                            &  1.31   &  0.279  &  5.86  &  0.04 \\
+ & Hn 2-pt \texttt{has}                            &  29.81  &  0.282  &  6.95  &  0.33 \\
+ & Hn 2-pt \texttt{mas}                            &  27.73  &  0.284  &  6.52  &  0.31 \\
+ & Hn 2-pt \texttt{obs}+\texttt{has}               &  5.15   &  0.283  &  6.21  &  0.23 \\
+ & Hn 2-pt \texttt{obs}+\texttt{mas}               &  0.69   &  0.279  &  6.1  &  0.14 \\
+ & Hn 2-pt \texttt{mas}+\texttt{has}               &  31.79  &  0.282  &  6.97  &  0.43 \\
+ & Hn 2-pt \texttt{mas}+\texttt{has}+\texttt{obs}  &  7.12  &  0.282  &  6.33  &  0.35 \\
 \hline
 \end{tabular}
 \label{williams-pike-table}
